--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "bulma": "^0.8.1",
+    "@fullhuman/postcss-purgecss": "^2.1.0",
     "next": "^9.3.1",
-    "node-sass": "^4.13.1",
+    "postcss-preset-env": "^6.7.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "tailwindcss": "^1.2.0"
   },
   "devDependencies": {},
   "scripts": {
